<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"

            android:layout_width="match_parent"
            android:layout_height="192dp"
            app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="date"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/mood_details_box"
            app:layout_constraintEnd_toEndOf="@+id/mood_details_box" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_pfp_req_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="20sp"
                android:layout_height="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#D7D4FD"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"></androidx.appcompat.widget.Toolbar>

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="69dp"
            android:layout_height="64dp"
            android:background="#00FFFFFF"
            android:contentDescription="Go to previous page"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/whose_mood_text"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:fontFamily="@font/noto_sans_bold"
            android:text="User's Mood"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/mood_details_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/layout_rounded_mood_bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintLeft_toRightOf="@id/user_pfp_req_follow"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/emotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Emotion" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Reason" />

                <ImageView
                    android:id="@+id/mood_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/social_situation_icon"
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="0"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <TextView
                    android:id="@+id/social_situation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="social situation"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="Original mood is displayed here"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/add_comment_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mood_details_box">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comments_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:fillViewport="true"></androidx.recyclerview.widget.RecyclerView>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_comment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:endIconContentDescription="Add comment"
            app:endIconDrawable="@android:drawable/ic_menu_send"
            app:endIconMode="custom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <!--        app:layout_anchor="@+id/nestedScrollView"-->
            <!--        app:layout_anchorGravity="bottom|center">-->


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_comment_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:hint="Add a comment"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>