...
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/feed_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="120dp"
            android:hint="Search feed" />

...
            <TextView
                android:id="@+id/users_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:paddingHorizontal="30dp"
                android:text="Users"
                android:textSize="15dp" />
        </LinearLayout>


    </LinearLayout>

...
