package com.example.project_seekdeep;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import android.util.Log;

import androidx.test.espresso.action.ViewActions;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;

import com.example.project_seekdeep.Helpers.EmotionalStates;
import com.example.project_seekdeep.Helpers.SocialSituations;
import com.example.project_seekdeep.Helpers.UserProfile;
import com.example.project_seekdeep.Moods.Mood;
import com.google.firebase.firestore.CollectionReference;
import com.google.firebase.firestore.FirebaseFirestore;

import org.junit.After;
import org.junit.Before;
import org.junit.BeforeClass;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.io.IOException;
import java.net.HttpURLConnection;
import java.net.MalformedURLException;
import java.net.URL;
import java.util.Objects;

@RunWith(AndroidJUnit4.class)
@LargeTest
public class FeedFragmentUITest {
    @Rule
    public ActivityScenarioRule<MainActivity> scenario =
            new ActivityScenarioRule<MainActivity>(MainActivity.class);

    private UserProfile testUser1 = new UserProfile("User1", "12345678");
    private UserProfile testUser2 = new UserProfile("User2", "12345678");
    private UserProfile testUser3 = new UserProfile("User3", "12345678");

    @BeforeClass
    public static void setup() {
        // Specific address for emulated device to access our localHost
        String androidLocalhost = "10.0.2.2";

        int portNumber = 8080;
        FirebaseFirestore.getInstance().useEmulator(androidLocalhost, portNumber);
    }

    @Before
    public void seedDatabase() throws InterruptedException {
        FirebaseFirestore db = FirebaseFirestore.getInstance();
        //Make sure the collectionPath names match the collection names in your code and in firebase
        CollectionReference usersRef = db.collection("users");
        CollectionReference moodsRef = db.collection("MoodDB");

        Mood mood1 = new Mood(testUser2, EmotionalStates.SADNESS, SocialSituations.CROWD);

        //Put all the test users into firebase emulator
        usersRef.document().set(testUser1);
        usersRef.document().set(testUser2);
        usersRef.document().set(testUser3);

        moodsRef.document().set(mood1);

        // log in first
        scenario.getScenario().onActivity(activity -> activity.setCurrentUser(testUser1));
        scenario.getScenario().onActivity(activity -> activity.successful_login());
    }

    @After
    public void tearDown() {
        String projectId = "project-seekdeep";
        URL url = null;
        try {
            url = new URL("http://10.0.2.2:8080/emulator/v1/projects/" + projectId + "/databases/(default)/documents");
        } catch (MalformedURLException exception) {
            Log.e("URL Error", Objects.requireNonNull(exception.getMessage()));
        }
        HttpURLConnection urlConnection = null;
        try {
            urlConnection = (HttpURLConnection) url.openConnection();
            urlConnection.setRequestMethod("DELETE");
            int response = urlConnection.getResponseCode();
            Log.i("Response Code", "Response Code: " + response);
        } catch (IOException exception) {
            Log.e("IO Error", Objects.requireNonNull(exception.getMessage()));
        } finally {
            if (urlConnection != null) {
                urlConnection.disconnect();
            }
        }
    }

    @Test
    public void testClickOnUsersTabToSeeAllUsers() throws InterruptedException {
        //Give time to log into User1's account
        Thread.sleep(2000);

        //Click on the Users tab
        onView(withText("Users")).perform(click());
        Thread.sleep(2000);

        //Check that all existing users except the logged-in user is displayed
        onView(withText("User2")).check(matches(isDisplayed()));
        onView(withText("User3")).check(matches(isDisplayed()));
    }

    @Test
    public void testSearchForUsersWithSubstring() throws InterruptedException {
        //Give time to log into User1's account
        Thread.sleep(2000);

        //Click on the Users tab
        onView(withText("Users")).perform(click());
        Thread.sleep(2000);

        //Type "2" in the search bar
        onView(withId(R.id.feed_search_bar)).perform(ViewActions.typeText("2"));
        Thread.sleep(1000);

        //Check that "User2" is displayed in the results
        onView(withText("User2")).check(matches(isDisplayed()));

        //Check that "User3" is NOT displayed in the results
        onView(withText("User3")).check(doesNotExist());
    }

}
